Fix bug 1418540: Fix overlay image cutoff in all-resources.

--- a/pontoon/base/static/css/translate.css
+++ b/pontoon/base/static/css/translate.css
@@ -21,6 +21,7 @@ body {
   left: 0;
   right: 0;
   margin: 0 auto;
+  max-width: 90%;
 }
 
 mark.placeable {
